# fastform-2

./: .gitignore  .pre-commit-config.yaml  .railwayignore  CLOUD_DEPLOYMENT.md  DATA_EXPANSION.md  Dockerfile  Makefile  RAILWAY_DEPLOY_STEPS.md  README.md  deploy_to_railway.sh  fastform.spec  pyproject.toml  pytest-output.txt  railway.toml
scripts/: ingest_formulary.py  migrate_to_multi_formulary.py  update_formularies.py
src/fastform/: app_entry.py  settings.py
src/fastform/api/: app.py
src/fastform/api/routes/: __init__.py  ai_drugs.py  drugs.py  formularies.py  health.py
tests/: conftest.py  test_drugs.py  test_health.py
