[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastform"
version = "0.1.0"
description = "FastForm – clean FastAPI service with rules engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
  "ruff>=0.6.8",
  "black>=24.8",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "pyinstaller>=6.16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
namespace_packages = true
